--- a/HTML/vulnerabilities.html
+++ b/HTML/vulnerabilities.html
@@ -3,14 +3,14 @@
 
 <head>
     <!--
-    This will be a web form
+    This will have information on past and current vulnerabilities
    -->
     <meta charset="utf-8" />
     <title>contact</title>
 </head>
 
 <body>
-This page will be a web form 
+    This will have information on past and current vulnerabilities
 </body>
 
 </html>
